funcionalidad del semaforo ;parentesis culiao

--- a/semaforo/estilos.css
+++ b/semaforo/estilos.css
@@ -31,15 +31,15 @@ body{
 
 }
 
-.rojo{
+.rojo.prendida{
     background: red;
 
 }
-.verde{
+.verde.prendida{
     background: green;    
 }
 
-.amarillo{
+.amarillo.prendida{
     background: yellow;
     
 }
